--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
 
     <!--<link rel="stylesheet" href="css/9ab3e30.css">-->
     <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
     <link rel="icon" type="image/x-icon" href="/img/favicon.jpg"/>
     <!--<script src="bundles/fosjsrouting/js/router.js"></script>-->
     <!--<script src="js/routing?callback=fos.Router.setData"></script>-->
@@ -130,62 +131,57 @@
         </div>
     </nav>
 </header>
-<main class="main-page flex">
-    <div class="xs100 sm50 item-image static-height">
-        <img src="/img/flex.jpg" alt="Item" class="transform-c-c">
-    </div>
-    <div class="xs100 sm50 flex flex-c-c flex-c">
-        <div class="half-block item-description">
-            <h1 class="title">Nike</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-            <ul class="flex options">
-                <li class="xs23 sm48 md23">
-                    <div class="option">
-                        <svg height="32" width="32">
-                            <use x="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#smartphone" y="0"></use>
-                        </svg>
-                    </div>
-                    <h2 class="small-title">Mobile</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
-                </li>
-                <li class="xs23 sm48 md23">
-                    <div class="option">
-                        <svg height="32" width="32">
-                            <use x="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#full_screen" y="0"></use>
-                        </svg>
-                    </div>
-                    <h2 class="small-title">Full-size</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
-                </li>
-                <li class="xs23 sm48 md23">
-                    <div class="option">
-                        <svg height="32" width="32">
-                            <use x="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#secure_book" y="0"></use>
-                        </svg>
-                    </div>
-                    <h2 class="small-title">SLL</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
-                </li>
-                <li class="xs23 sm48 md23">
-                    <div class="option">
-                        <svg height="32" width="32">
-                            <use x="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#html" y="0"></use>
-                        </svg>
-                    </div>
-                    <h2 class="small-title">Modern</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
-                </li>
-            </ul>
-            <ul class="list-inline">
-                <li>
-                    <a href="#" class="btn btn-active">Заказать</a>
-                </li>
-                <li>
-                    <a href="#" class="disable btn">Портфолио</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+<main class="static-page">
+    <ul class="portfolio">
+        <li>
+            <div class="see-more">
+                <a href="/item.html" class="line-before line-after">
+                    <svg height="30" width="30">
+                        <use x="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#read_more" y="0"></use>
+                    </svg>
+                    <span>Подробнее</span>
+                </a>
+            </div>
+            <img src="/img/go_to_main.jpg" alt="lala" class="transform-c-c">
+            <a href="#" class="btn btn-active">Подробнее</a>
+        </li>
+        <li>
+            <div class="see-more">
+                <a href="/item.html" class="line-before line-after">
+                    <svg height="30" width="30">
+                        <use x="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#read_more" y="0"></use>
+                    </svg>
+                    <span>Подробнее</span>
+                </a>
+            </div>
+            <img src="/img/design_bg.jpg" alt="lala" class="transform-c-c">
+            <a href="#" class="btn btn-active">Подробнее</a>
+        </li>
+        <li>
+            <div class="see-more">
+                <a href="/item.html" class="line-before line-after">
+                    <svg height="30" width="30">
+                        <use x="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#read_more" y="0"></use>
+                    </svg>
+                    <span>Подробнее</span>
+                </a>
+            </div>
+            <img src="/img/homepage_bg.jpg" alt="lala" class="transform-c-c">
+            <a href="#" class="btn btn-active">Подробнее</a>
+        </li>
+        <li>
+            <div class="see-more">
+                <a href="/item.html" class="line-before line-after">
+                    <svg height="30" width="30">
+                        <use x="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#read_more" y="0"></use>
+                    </svg>
+                    <span>Подробнее</span>
+                </a>
+            </div>
+            <img src="/img/flex.jpg" alt="lala" class="transform-c-c">
+            <a href="#" class="btn btn-active">Подробнее</a>
+        </li>
+    </ul>
 </main>
 <footer class="footer">
     <div class="container flex nowrap">
