--- a/contacts.html
+++ b/contacts.html
@@ -43,36 +43,66 @@
         <title>Arrow left</title>
         <path d="m88.6 121.3c0.8 0.8 1.8 1.2 2.9 1.2s2.1-0.4 2.9-1.2c1.6-1.6 1.6-4.2 0-5.8l-51-51 51-51c1.6-1.6 1.6-4.2 0-5.8s-4.2-1.6-5.8 0l-54 53.9c-1.6 1.6-1.6 4.2 0 5.8l54 53.9z"></path>
     </symbol>
+    <symbol id="smartphone" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35">
+        <title>Smartphone</title>
+        <path d="M25.3 0H9.7c-1.3 0-2.4 1.1-2.4 2.4v30.3C7.3 33.9 8.4 35 9.7 35h15.6c1.3 0 2.4-1.1 2.4-2.4V2.4C27.7 1.1 26.6 0 25.3 0zM15 1.7h5c0.2 0 0.3 0.1 0.3 0.3 0 0.2-0.1 0.3-0.3 0.3h-5c-0.2 0-0.3-0.1-0.3-0.3C14.7 1.8 14.8 1.7 15 1.7zM17.5 33.8c-0.7 0-1.2-0.5-1.2-1.2s0.5-1.2 1.2-1.2 1.2 0.5 1.2 1.2S18.2 33.8 17.5 33.8zM26 30.6H9V3.7h17V30.6z"></path>
+    </symbol>
+    <symbol id="full_screen" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 459.9 459.9" >
+        <title>Full screen</title>
+        <path d="M158.9 279.1l-54.4 54.4 -32.9-32.9c-1.8-1.8-4.5-2.3-6.9-1.4 -2.4 1-3.9 3.3-3.9 5.8l0 87.5c0 3.5 2.8 6.3 6.3 6.3l87.5 0c2.6 0 4.9-1.5 5.8-3.9 1-2.4 0.4-5.1-1.4-6.9l-32.9-32.9 54.4-54.4c6-6 6-15.7 0-21.7C174.6 273.2 164.9 273.2 158.9 279.1z"></path>
+        <path d="M394.5 299.3c-2.4-1-5.1-0.4-6.9 1.4l-32.9 32.9 -54.4-54.4c-6-6-15.7-6-21.7 0 -6 6-6 15.7 0 21.7l54.4 54.4 -32.9 32.9c-1.8 1.8-2.3 4.5-1.4 6.9 1 2.4 3.3 3.9 5.8 3.9l87.5 0c3.5 0 6.3-2.8 6.3-6.3l0-87.5C398.4 302.5 396.9 300.2 394.5 299.3z"></path>
+        <path d="M126.2 103.7l32.9-32.9c1.8-1.8 2.3-4.5 1.4-6.9 -1-2.4-3.3-3.9-5.8-3.9L67.2 60.1c-3.5 0-6.3 2.8-6.3 6.3l0 87.5c0 2.6 1.5 4.9 3.9 5.8 2.4 1 5.1 0.4 6.9-1.4l32.9-32.9 54.4 54.4c3 3 6.9 4.5 10.8 4.5 3.9 0 7.8-1.5 10.8-4.5 6-6 6-15.7 0-21.7L126.2 103.7z"></path>
+        <path d="M392.1 60.1l-87.5 0c-2.6 0-4.9 1.5-5.8 3.9 -1 2.4-0.4 5.1 1.4 6.9l32.9 32.9 -54.4 54.4c-6 6-6 15.7 0 21.7 3 3 6.9 4.5 10.8 4.5 3.9 0 7.8-1.5 10.8-4.5l54.4-54.4 32.9 32.9c1.8 1.8 4.5 2.3 6.9 1.4 2.4-1 3.9-3.3 3.9-5.8l0-87.5C398.4 62.9 395.6 60.1 392.1 60.1z"></path>
+        <path d="M423.8 0H36.1C16.1 0 0 16.1 0 36.1v387.8c0 19.9 16.1 36.1 36 36.1h387.8c19.9 0 36.1-16.1 36.1-36V36.1C459.9 16.1 443.8 0 423.8 0zM429.2 423.8c0 3-2.4 5.4-5.4 5.4H36.1c-3 0-5.4-2.4-5.4-5.4V36.1c0-3 2.4-5.4 5.4-5.4h387.8c3 0 5.4 2.4 5.4 5.4V423.8z"></path>
+    </symbol>
+    <symbol id="secure_book" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+        <title>Secure book</title>
+        <path d="M32 23c0-3.9-2.5-7.2-6-8.5V4h-2V2h2V0h-23C2.9 0 2.3 0 1.6 0.4 0.8 0.7 0 1.6 0 3c0 0 0 0 0 0V30c0 2 2 2 2 2h21.1l0 0C28 32 32 27.9 32 23zM2.9 4C2.7 4 2.4 3.9 2.3 3.7 2.1 3.6 2 3.5 2 3c0-0.6 0.2-0.7 0.4-0.9 0.1-0.1 0.3-0.1 0.4-0.1C3 2 3 2 3 2h19V4h-19C3 4 3 4 2.9 4zM4 30V6h20v8.1C23.7 14 23.3 14 23 14c-2.1 0-4.1 0.8-5.6 2H6v2h9.5c-0.4 0.6-0.7 1.3-1 2H6v2h8.1c0 0.3-0.1 0.7-0.1 1 0 2.8 1.3 5.4 3.3 7H4zM23 30c-3.9 0-7-3.1-7-7 0-3.9 3.1-7 7-7 3.9 0 7 3.1 7 7C30 26.9 26.9 30 23 30z"></path>
+        <rect x="6" y="12" width="16" height="2"></rect>
+        <path d="M26.2 21.6c0-0.7-0.1-1.5-0.6-2.3 -0.5-0.8-1.4-1.4-2.6-1.3 -1.2 0-2.1 0.6-2.6 1.3 -0.5 0.8-0.6 1.6-0.6 2.3 0 0.1 0 0.3 0 0.4H19V27h8v-5h-0.9C26.2 21.9 26.2 21.7 26.2 21.6zM24.1 22h-2.3c0-0.1 0-0.3 0-0.4 0-0.5 0.1-1 0.3-1.2 0.2-0.2 0.3-0.4 0.9-0.4 0.6 0 0.7 0.2 0.9 0.4 0.2 0.2 0.3 0.7 0.3 1.2C24.2 21.7 24.1 21.9 24.1 22z"></path>
+    </symbol>
+    <symbol id="html" xmlns="http://www.w3.org/2000/svg"viewBox="0 0 512 512">
+        <title>HTML 5</title>
+        <path d="M30.3 0l41.1 460.8L255.7 512l184.9-51.3L481.7 0H30.3zM405.4 431.4L256.8 472.6v0.2l-0.4-0.1 -0.4 0.1V472.6l-148.6-41.2L72.3 37.7h368.2L405.4 431.4zM325.4 265.1l-6.5 73.3 -63 17 -0.1 0 -62.9-17 -4-45.1h-56.7l7.9 88.8 115.8 32.1h0.1 0.1l0.1 0 115.7-32.1 15.5-173.5H181.2l-5.2-57.9h216.1 0.2l5.1-56.5H114.3l15.2 170.9H325.4L325.4 265.1z"></path>
+    </symbol>
+    <symbol id="read_more" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+        <title>Read more</title>
+        <path d="m394.4 202.5l-63.2-54.2c-8.5-7.4-21.4-6.4-28.8 2.2-7.3 8.6-6.4 21.4 2.2 28.8l21.3 18.3h-119c-11.3 0-20.4 9.1-20.4 20.4 0 11.3 9.1 20.4 20.4 20.4h119.1l-21.3 18.3c-8.6 7.3-9.7 20.4-2.2 28.8 10.7 11.9 24.6 6.1 28.8 2.2l63.2-54.2c4.5-3.9 7.1-9.5 7.1-15.5-0.1-5.9-2.7-11.6-7.2-15.5z"></path>
+        <path d="m294 11.1c-114.3 0-206.9 92.6-206.9 206.9 0 49.8 17.6 95.5 46.9 131.2l-117 117c-8 8-8 20.9 0 28.9 8 8 20.9 8 28.9 0l117-117c35.7 29.3 81.4 46.9 131.2 46.9 114.2-0.1 206.9-92.7 206.9-207s-92.7-206.9-207-206.9zm0 373c-91.7 0-166.1-74.4-166.1-166.1s74.4-166.1 166.1-166.1 166.1 74.4 166.1 166.1-74.3 166.1-166.1 166.1z"></path>
+    </symbol>
 </svg>
+<div class="shadow"></div>
 <header>
     <div class="header flex flex-end flex-c container">
         <a href="/" class="xs33 align-c logo">
             <img src="img/logo-home-new.png">
         </a>
-        <div class="xs33 flex flex-end">
+        <div class="xs33 flex flex-end phones">
             <div class="text-upper">звоните</div>
-            <div class="phones">
+            <div>
                 <a href="tel:0679309794"><span>067</span>930-97-94</a>
                 <a href="tel:0635827959"><span>063</span>582-79-59</a>
             </div>
         </div>
+        <button type="button" class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <div class="mobile-menu">
+            <a href="/" class="active">Главная</a>
+            <a href="/portfolio.html">Портфолио</a>
+            <a href="/contacts.html">Контакты</a>
+        </div>
     </div>
     <nav>
         <div class="container flex flex-c">
-            <div class="xs33 section">
+            <div class="xs48 sm33 section">
                 <svg height="20" width="15">
                     <use x="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow_left" y="0"></use>
                 </svg>
                 <a href="/design.html" class="line-after">Дизайн интерьера</a>
             </div>
-            <!--<div class="navbar-header">-->
-            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">-->
-            <!--<span class="sr-only">Toggle navigation</span>-->
-            <!--<span class="icon-bar"></span>-->
-            <!--<span class="icon-bar"></span>-->
-            <!--<span class="icon-bar"></span>-->
-            <!--</button>-->
-            <!--</div>-->
             <div class="flex language main-link">
                 <a href="/" class="active">рус</a>
                 <div class="dropdown">
@@ -92,19 +122,19 @@
                 </div>
                 <a href="/en">eng</a>
             </div>
-            <div class="xs33 menu main-link flex flex-end">
+            <div class="xs50 sm33 menu main-link flex flex-end">
                 <a href="/" class="active">Главная</a>
-                <a href="/portfolio">Портфолио</a>
-                <a href="/contacts">Контакты</a>
+                <a href="/portfolio.html">Портфолио</a>
+                <a href="/contacts.html">Контакты</a>
             </div>
         </div>
     </nav>
 </header>
 <main class="main-page flex">
-    <div class="xs50">
+    <div class="xs100 sm50 static-height">
         <div id="googleMap" style="width:100%;height:100%;"></div>
     </div>
-    <div class="xs50 flex flex-c-c flex-c">
+    <div class="xs100 sm50 flex flex-c-c flex-c">
         <div class="half-block">
             <h1 class="title">Обратная связь</h1>
             <dl class="dl-list">
@@ -120,21 +150,21 @@
             </dl>
             <h2 class="middle-title">Или напишите нам:</h2>
             <form action="#" class="flex">
-                <div class="sm48">
+                <div class="sm100 md48 xs100">
                     <div class="form-field">
                         <label>Ваше имя:</label>
                         <input type="text" placeholder="Введите полное имя..." required>
                     </div>
                     <div class="form-field">
                         <label>Ваш Телефон:</label>
-                        <input type="text" placeholder="+38 (___) ___ - __ - __" required>
+                        <input type="text" placeholder="+38 (___) ___ - __ - __" maxlength="13" required>
                     </div>
                     <div class="form-field">
                         <label>Ваш e-mail:</label>
                         <input type="email" placeholder="example@gmail.com" required>
                     </div>
                 </div>
-                <div class="sm48">
+                <div class="sm100 md48 xs100">
                     <div class="form-field">
                         <label>Ваше сообщение:</label>
                         <textarea placeholder="Введите Ваш вопрос и мы ответим максимально быстро..."></textarea>
@@ -188,8 +218,10 @@
     </div>
 </footer>
 
-<script src="js/df6f1ac.js"></script>
-<script src="js/6feeb31.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+<script src="js/main.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2kwWgLCGt45Bo8r-TZt50TbzD48KrxPw&callback=myMap"></script>
+
 </body>
 </html>
