added social metatags

--- a/contacts.html
+++ b/contacts.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta charset="UTF-8">
     <title>Sotnikova Design Group | Дизайн интерьера в Черкассах</title>
-    <meta name="description" content="Наша студия реализовала десятки проектов в Черкассах и по Украине. Работаем как с небольшими индивидуальными заказами, так и с большими компаниями.">
-    <meta name="keywords" content="">
+    <meta content="width=device-width, maximum-scale=1.0" name="viewport">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.jpg">
+    <link href="http://deem.com.ua/" rel="canonical">
+    <meta content="index,follow" name="robots">
 
-    <!--<link rel="stylesheet" href="css/9ab3e30.css">-->
-    <link rel="stylesheet" type="text/css" href="/css/main.css" />
-    <link rel="icon" type="image/x-icon" href="/img/favicon.jpg"/>
-    <!--<script src="bundles/fosjsrouting/js/router.js"></script>-->
-    <!--<script src="js/routing?callback=fos.Router.setData"></script>-->
+    <meta content="Наша студия реализовала десятки проектов в Черкассах и по Украине. Работаем как с небольшими индивидуальными заказами, так и с большими компаниями." name="description">
+    <meta content="Sotnikova Design Group" name="copyright">
+    <meta content="Sotnikova Design Group" name="author">
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@Sotnikova" name="twitter:site">
+    <meta content="http://deem.com.ua/" name="twitter:url">
+    <meta content="Sotnikova Design Group" name="twitter:title">
+    <meta content="Наша студия реализовала десятки проектов в Черкассах и по Украине. Работаем как с небольшими индивидуальными заказами, так и с большими компаниями." name="twitter:description">
+    <meta content="/img/homepage_bg.jpg" name="twitter:image">
+    <meta content="https://www.facebook.com/" property="article:author">
+
+    <meta content="http://deem.com.ua/" property="og:url">
+    <meta content="article" property="og:type">
+    <meta content="Sotnikova Design Group" property="og:title">
+    <meta content="Наша студия реализовала десятки проектов в Черкассах и по Украине. Работаем как с небольшими индивидуальными заказами, так и с большими компаниями.." property="og:description">
+    <meta content="/img/homepage_bg.jpg" property="og:image">
+
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
 <svg style="display: none">
@@ -220,7 +233,7 @@
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-<script src="js/main.js"></script>
+<script src="/js/main.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2kwWgLCGt45Bo8r-TZt50TbzD48KrxPw&callback=myMap"></script>
 
 </body>
