added slider styles

--- a/design.html
+++ b/design.html
@@ -25,6 +25,7 @@
     <meta content="Наша студия реализовала десятки проектов в Черкассах и по Украине. Работаем как с небольшими индивидуальными заказами, так и с большими компаниями.." property="og:description">
     <meta content="/img/homepage_bg.jpg" property="og:image">
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
